--- a/client/src/components/sign_up.css
+++ b/client/src/components/sign_up.css
@@ -118,7 +118,7 @@ body {
 }
 
 .signup-form {
-  width: 450px;
+  width: 400px;
   margin: 30px auto; // padding: 30px 0;
 }
 
@@ -222,19 +222,28 @@ body {
 
 .navbar {
   border: 0px;
+  font-size: 16px;
+}
+
+.navbar .container {
+  margin-top: 5px;
 }
 
 .navbar-default {
   border-radius: 0px;
-  background-image: linear-gradient(to bottom,#484848 0,#484848 100%);
+  background-image: linear-gradient(to bottom,#fff 0,#fff 100%);
 }
 
 .navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover,
  .navbar-default .navbar-nav>li>a, .navbar-default .navbar-brand,
  .navbar-default .navbar-brand:hover {
-    color: white;
+    color: black;
 }
 
-.navbar-margin {
-  margin-top: 5px;
+.form-control {
+  height: 31px;
+}
+
+.form-control, .btn {
+  min-height: 31px;
 }
