--- a/client/src/components/sign_up.css
+++ b/client/src/components/sign_up.css
@@ -279,14 +279,36 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+.blue-button {
+  height: 35px;
+  line-height: 23px;
+  background-color: hsl(0, 0%, 10%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#6666ff", endColorstr="#6666ff");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#6666ff), to(#6666ff));
+  background-image: -moz-linear-gradient(top, #6666ff, #6666ff);
+  background-image: -ms-linear-gradient(top, #6666ff, #6666ff);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #191919), color-stop(100%, #191919));
+  background-image: -webkit-linear-gradient(top, #6666ff, #6666ff);
+  background-image: -o-linear-gradient(top, #6666ff, #6666ff);
+  background-image: linear-gradient(#6666ff, #6666ff);
+  border-color: #6666ff #6666ff hsl(0, 0%, 10%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.00);
+  -webkit-font-smoothing: antialiased;
+}
+
 .main-container {
   height: 100%;
-  background-color: #F8F8F8;
+}
+
+.home-container {
+  padding-top: 90px;
 }
 
 .nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
-  color: grey;
-  background-color: inherit;
+  color: #808080;
+  background-color: #DCDCDC;
 }
 
 .nav-pills>li>a {
@@ -295,6 +317,7 @@ body {
   color: #808080;
   padding: 5px 5px;
   margin-bottom: 8px;
+  background-color: inherit;
 }
 
 .add-post-modal-footer {
@@ -313,8 +336,8 @@ body {
 
 @media (min-width: 768px) {
   .container {
-      padding-right: 95px;
-      padding-left: 95px;
+    padding-right: 95px;
+    padding-left: 95px;
   }
 
   .add-post-textarea {
@@ -357,6 +380,7 @@ body {
 .add-post-panel {
   height: 50px;
   line-height: 22px;
+  text-align: center;
 }
 
 .add-post-modal-header {
@@ -371,7 +395,7 @@ body {
   height: 250px;
 }
 
-.skill-dropdown {
+.common-dropdown {
   margin-right: 5px;
   border: none;
   background-color: inherit;
@@ -379,14 +403,14 @@ body {
   background-image: none;
 }
 
-.add-post-modal-footer .dropdown {
+.add-post-modal-footer .common-dropdown {
   height: 25px;
 }
 
-.skill-dropdown:hover, .skill-dropdown:focus, .skill-dropdown:active,
-.skill-dropdown:active.focus, .skill-dropdown:active:focus, .skill-dropdown:active:hover,
-.open>.dropdown-toggle.skill-dropdown.focus, .open>.dropdown-toggle.skill-dropdown:focus,
-.open>.dropdown-toggle.skill-dropdown:hover {
+.common-dropdown:hover, .common-dropdown:focus, .common-dropdown:active,
+.common-dropdown:active.focus, .common-dropdown:active:focus, .common-dropdown:active:hover,
+.open>.dropdown-toggle.common-dropdown.focus, .open>.dropdown-toggle.common-dropdown:focus,
+.open>.dropdown-toggle.common-dropdown:hover {
     color: #333;
     border: none;
     background-color: inherit;
@@ -402,4 +426,18 @@ body {
 
 .panel-title {
   font-weight: bold;
+}
+
+.left-nav {
+  position: fixed;
+}
+
+.start-project {
+  float: left;
+}
+
+.my-skills-left-nav-header h4{
+  border-bottom: 1px solid #e2e2e2;
+  padding-left: 5px;
+  padding-bottom: 10px;
 }
