--- a/client/src/components/sign_up.css
+++ b/client/src/components/sign_up.css
@@ -261,41 +261,141 @@ body {
 }
 
 .black-button {
-  height: 35px;
-  line-height: 23px;
-  background-color: hsl(0, 0%, 10%) !important;
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#191919", endColorstr="#191919");
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#191919), to(#191919));
-  background-image: -moz-linear-gradient(top, #191919, #191919);
-  background-image: -ms-linear-gradient(top, #191919, #191919);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #191919), color-stop(100%, #191919));
-  background-image: -webkit-linear-gradient(top, #191919, #191919);
-  background-image: -o-linear-gradient(top, #191919, #191919);
-  background-image: linear-gradient(#1b1b1b, #1b1b1b);
-  border-color: #191919 #191919 hsl(0, 0%, 10%);
-  color: #fff !important;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.00);
-  -webkit-font-smoothing: antialiased;
+  color: #EDE8E8;
+  background-color: #262626;
+  border-color: #010005;
+}
+
+.black-button:hover,
+.black-button:focus,
+.black-button:active,
+.black-button.active,
+.open .dropdown-toggle.black-button {
+  color: #EDE8E8;
+  background-color: #262626;
+  border-color: #010005;
+}
+
+.black-button:active,
+.black-button.active,
+.open .dropdown-toggle.black-button {
+  background-image: none;
+}
+
+.black-button.disabled,
+.black-button[disabled],
+fieldset[disabled] .black-button,
+.black-button.disabled:hover,
+.black-button[disabled]:hover,
+fieldset[disabled] .black-button:hover,
+.black-button.disabled:focus,
+.black-button[disabled]:focus,
+fieldset[disabled] .black-button:focus,
+.black-button.disabled:active,
+.black-button[disabled]:active,
+fieldset[disabled] .black-button:active,
+.black-button.disabled.active,
+.black-button[disabled].active,
+fieldset[disabled] .black-button.active {
+  background-color: #262626;
+  border-color: #010005;
+}
+
+.black-button .badge {
+  color: #262626;
+  background-color: #EDE8E8;
 }
 
 .blue-button {
-  height: 35px;
-  line-height: 23px;
-  background-color: hsl(0, 0%, 10%) !important;
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#6666ff", endColorstr="#6666ff");
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#6666ff), to(#6666ff));
-  background-image: -moz-linear-gradient(top, #6666ff, #6666ff);
-  background-image: -ms-linear-gradient(top, #6666ff, #6666ff);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #191919), color-stop(100%, #191919));
-  background-image: -webkit-linear-gradient(top, #6666ff, #6666ff);
-  background-image: -o-linear-gradient(top, #6666ff, #6666ff);
-  background-image: linear-gradient(#6666ff, #6666ff);
-  border-color: #6666ff #6666ff hsl(0, 0%, 10%);
-  color: #fff !important;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.00);
-  -webkit-font-smoothing: antialiased;
+  color: #ffffff;
+  background-color: #013975;
+  border-color: #EFF1F7;
+}
+
+.black-border-btn {
+  color: #000000;
+  background-color: #FFFFFF;
+  border-color: #010005;
+}
+
+.black-border-btn:hover,
+.black-border-btn:focus,
+.black-border-btn:active,
+.black-border-btn.active,
+.open .dropdown-toggle.black-border-btn {
+  color: #000000;
+  background-color: #fff;
+  border-color: #010005;
+}
+
+.black-border-btn:active,
+.black-border-btn.active,
+.open .dropdown-toggle.black-border-btn {
+  background-image: none;
+}
+
+.black-border-btn.disabled,
+.black-border-btn[disabled],
+fieldset[disabled] .black-border-btn,
+.black-border-btn.disabled:hover,
+.black-border-btn[disabled]:hover,
+fieldset[disabled] .black-border-btn:hover,
+.black-border-btn.disabled:focus,
+.black-border-btn[disabled]:focus,
+fieldset[disabled] .black-border-btn:focus,
+.black-border-btn.disabled:active,
+.black-border-btn[disabled]:active,
+fieldset[disabled] .black-border-btn:active,
+.black-border-btn.disabled.active,
+.black-border-btn[disabled].active,
+fieldset[disabled] .black-border-btn.active {
+  background-color: #FFFFFF;
+  border-color: #010005;
+}
+
+.black-border-btn .badge {
+  color: #FFFFFF;
+  background-color: #000000;
+}
+
+.blue-button:hover,
+.blue-button:focus,
+.blue-button:active,
+.blue-button.active,
+.open .dropdown-toggle.blue-button {
+  color: #ffffff;
+  background-color: #154E8C;
+  border-color: #EFF1F7;
+}
+
+.blue-button:active,
+.blue-button.active,
+.open .dropdown-toggle.blue-button {
+  background-image: none;
+}
+
+.blue-button.disabled,
+.blue-button[disabled],
+fieldset[disabled] .blue-button,
+.blue-button.disabled:hover,
+.blue-button[disabled]:hover,
+fieldset[disabled] .blue-button:hover,
+.blue-button.disabled:focus,
+.blue-button[disabled]:focus,
+fieldset[disabled] .blue-button:focus,
+.blue-button.disabled:active,
+.blue-button[disabled]:active,
+fieldset[disabled] .blue-button:active,
+.blue-button.disabled.active,
+.blue-button[disabled].active,
+fieldset[disabled] .blue-button.active {
+  background-color: #013975;
+  border-color: #EFF1F7;
+}
+
+.blue-button .badge {
+  color: #013975;
+  background-color: #ffffff;
 }
 
 .main-container {
@@ -440,4 +540,76 @@ body {
   border-bottom: 1px solid #e2e2e2;
   padding-left: 5px;
   padding-bottom: 10px;
+}
+
+.skill-header {
+  margin-bottom: 40px;
+}
+
+.myskills-btn-grp, .add-post-div, .add-project-div {
+  display: inline-flex;
+  width: 100%;
+}
+
+.myskills-btn-grp {
+  margin-bottom: 10px;
+}
+
+.add-post-btn {
+  width: 100%;
+  height: 40px;
+}
+
+.add-project-btn {
+  width: 100%;
+  height: 40px;
+}
+
+.btn-sep-div {
+  width: 3%;
+}
+
+.add-post-panel {
+  width: 100%;
+  height: 50px;
+  line-height: 22px;
+  text-align: center;
+}
+
+.add-project-panel {
+  width: 100%;
+  height: 50px;
+  line-height: 22px;
+  text-align: center;
+}
+
+.add-post-panel-body {
+  float: left;
+}
+
+.add-project-panel-body {
+  float: right;
+}
+
+.select-skill {
+  position: relative;
+  box-sizing: border-box;
+  width: 20%;
+  display: inline-block;
+  margin-right: 10px;
+
+}
+
+.select-skill__control {
+  background-color: #fff !important;
+  border-color: #fff !important;
+  border-width: 0px !important;
+  box-shadow: #fff !important;
+}
+
+.select-skill__control--is-focused {
+  background-color: #fff !important;
+  border-color: #fff !important;
+  border-width: 0px !important;
+  box-shadow: #fff !important;
 }
