--- a/client/src/components/global_nav.css
+++ b/client/src/components/global_nav.css
@@ -1,30 +1,79 @@
+.navbar-header {
+  width: 100%;
+  margin-right: 0px !important;
+  margin-left: 0px !important;
+}
+
+.navbar-form {
+  padding: 10px 0px;
+  margin: 0px;
+  border: 0px;
+  float: left;
+}
+
 .searchForm {
-  width: 50%;
+  width: 40%;
+}
+
+.navbar .container {
+  padding: 0px 0px;
+}
+
+@media (min-width: 768px) {
+  .navbar .container, .home-container {
+    width: 100%;
+    padding-right: 95px;
+    padding-left: 95px;
+  }
+  .navbar-header {
+    width: 50%;
+  }
+  .navbar-form {
+    padding: 2px 0px 0px 0px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+  }
+  .searchForm {
+    width: 70%;
+  }
+}
+
+@media (min-width: 992px) {
+  .navbar .container, .home-container {
+    width: 970px;
+  }
+  .navbar-header {
+    width: 50%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .navbar .container, .home-container {
+    width: 1170px;
+  }
+  .navbar-header {
+    width: 50%;
+  }
 }
 
 .searchBar {
-  width: 80% !important;
+  width: 100% !important;
 }
 
 .searchInput {
-  background-image:url(../search-icon.png);
+  background-image: url(../search-icon.png);
   background-repeat: no-repeat;
   background-position: 98% 50%;
 }
 
 .searchBar .form-control {
-  width: 80% !important;
+  width: 100% !important;
   border: 1px solid #e4e4e4;
   min-height: 30px;
   height: 30px;
-  color: #808080;
-  box-shadow: inset 0 1px 1px rgba(200,200,200,0.3);
+  color: black;
+  box-shadow: inset 0 1px 1px rgba(200, 200, 200, 0.3);
   padding-left: 8px;
-}
-
-.navbar-form {
-  padding-top: 1px;
-  padding-left: 0px;
 }
 
 .navbar {
@@ -33,23 +82,32 @@
   margin-bottom: 40px;
 }
 
-.navbar .container {
-  margin-top: 5px;
-}
-
 .navbar-default {
   border-radius: 0px;
-  background-image: linear-gradient(to bottom,#fff 0,#fff 100%);
+  background-image: linear-gradient(to bottom, #fff 0, #fff 100%);
 }
 
-.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover,
- .navbar-default .navbar-nav>li>a, .navbar-default .navbar-brand,
- .navbar-default .navbar-brand:hover {
-    color: black;
+.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a, .navbar-default .navbar-brand, .navbar-default .navbar-brand:hover {
+  color: black;
+}
+
+.navbar-default .navbar-nav>li>a:hover,
+.navbar-default .navbar-nav>.open>a,
+.navbar-default .navbar-nav>.open>a:focus,
+.navbar-default .navbar-nav>.open>a:hover,
+.navbar-default .navbar-nav>.active>a,
+.navbar-default .navbar-nav>.open>a {
+  background-image: none;
+  background-color: #FAFAFA;
+  box-shadow: none;
 }
 
 .navbar {
-  -webkit-box-shadow: -1px 3px 4px -3px rgba(211,211,211,1);
-  -moz-box-shadow: -1px 3px 4px -3px rgba(211,211,211,1);
-  box-shadow: -1px 3px 4px -3px rgba(211,211,211,1);
+  -webkit-box-shadow: -1px 3px 4px -3px rgba(211, 211, 211, 1);
+  -moz-box-shadow: -1px 3px 4px -3px rgba(211, 211, 211, 1);
+  box-shadow: -1px 3px 4px -3px rgba(211, 211, 211, 1);
+}
+
+.navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse {
+  padding-left: 30px;
 }
