--- a/client/src/components/sign_up.css
+++ b/client/src/components/sign_up.css
@@ -21,13 +21,11 @@ html, body {
   padding-top: 90px;
 }
 
-.modal.fade .modal-dialog
-{
+.modal.fade .modal-dialog {
   -moz-transition: none !important;
   -o-transition: none !important;
   -webkit-transition: none !important;
   transition: none !important;
-
   -moz-transform: none !important;
   -ms-transform: none !important;
   -o-transform: none !important;
@@ -36,11 +34,11 @@ html, body {
 }
 
 .modal-dialog {
-    -webkit-transform: translate(0,-50%);
-    -o-transform: translate(0,-50%);
-    transform: translate(0,-50%);
-    top: 25%;
-    margin: 0 auto;
+  -webkit-transform: translate(0, -50%);
+  -o-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  top: 25%;
+  margin: 0 auto;
 }
 
 .black-button {
@@ -49,37 +47,17 @@ html, body {
   border-color: #010005;
 }
 
-.black-button:hover,
-.black-button:focus,
-.black-button:active,
-.black-button.active,
-.open .dropdown-toggle.black-button {
+.black-button:hover, .black-button:focus, .black-button:active, .black-button.active, .open .dropdown-toggle.black-button {
   color: #EDE8E8;
   background-color: #262626;
   border-color: #010005;
 }
 
-.black-button:active,
-.black-button.active,
-.open .dropdown-toggle.black-button {
+.black-button:active, .black-button.active, .open .dropdown-toggle.black-button {
   background-image: none;
 }
 
-.black-button.disabled,
-.black-button[disabled],
-fieldset[disabled] .black-button,
-.black-button.disabled:hover,
-.black-button[disabled]:hover,
-fieldset[disabled] .black-button:hover,
-.black-button.disabled:focus,
-.black-button[disabled]:focus,
-fieldset[disabled] .black-button:focus,
-.black-button.disabled:active,
-.black-button[disabled]:active,
-fieldset[disabled] .black-button:active,
-.black-button.disabled.active,
-.black-button[disabled].active,
-fieldset[disabled] .black-button.active {
+.black-button.disabled, .black-button[disabled], fieldset[disabled] .black-button, .black-button.disabled:hover, .black-button[disabled]:hover, fieldset[disabled] .black-button:hover, .black-button.disabled:focus, .black-button[disabled]:focus, fieldset[disabled] .black-button:focus, .black-button.disabled:active, .black-button[disabled]:active, fieldset[disabled] .black-button:active, .black-button.disabled.active, .black-button[disabled].active, fieldset[disabled] .black-button.active {
   background-color: #262626;
   border-color: #010005;
 }
@@ -89,49 +67,23 @@ fieldset[disabled] .black-button.active {
   background-color: #EDE8E8;
 }
 
-.blue-button {
-  color: #ffffff;
-  background-color: #013975;
-  border-color: #EFF1F7;
-}
-
 .black-border-btn {
   color: #000000;
   background-color: #FFFFFF;
   border-color: #010005;
 }
 
-.black-border-btn:hover,
-.black-border-btn:focus,
-.black-border-btn:active,
-.black-border-btn.active,
-.open .dropdown-toggle.black-border-btn {
+.black-border-btn:hover, .black-border-btn:focus, .black-border-btn:active, .black-border-btn.active, .open .dropdown-toggle.black-border-btn {
   color: #000000;
   background-color: #fff;
   border-color: #010005;
 }
 
-.black-border-btn:active,
-.black-border-btn.active,
-.open .dropdown-toggle.black-border-btn {
+.black-border-btn:active, .black-border-btn.active, .open .dropdown-toggle.black-border-btn {
   background-image: none;
 }
 
-.black-border-btn.disabled,
-.black-border-btn[disabled],
-fieldset[disabled] .black-border-btn,
-.black-border-btn.disabled:hover,
-.black-border-btn[disabled]:hover,
-fieldset[disabled] .black-border-btn:hover,
-.black-border-btn.disabled:focus,
-.black-border-btn[disabled]:focus,
-fieldset[disabled] .black-border-btn:focus,
-.black-border-btn.disabled:active,
-.black-border-btn[disabled]:active,
-fieldset[disabled] .black-border-btn:active,
-.black-border-btn.disabled.active,
-.black-border-btn[disabled].active,
-fieldset[disabled] .black-border-btn.active {
+.black-border-btn.disabled, .black-border-btn[disabled], fieldset[disabled] .black-border-btn, .black-border-btn.disabled:hover, .black-border-btn[disabled]:hover, fieldset[disabled] .black-border-btn:hover, .black-border-btn.disabled:focus, .black-border-btn[disabled]:focus, fieldset[disabled] .black-border-btn:focus, .black-border-btn.disabled:active, .black-border-btn[disabled]:active, fieldset[disabled] .black-border-btn:active, .black-border-btn.disabled.active, .black-border-btn[disabled].active, fieldset[disabled] .black-border-btn.active {
   background-color: #FFFFFF;
   border-color: #010005;
 }
@@ -141,37 +93,23 @@ fieldset[disabled] .black-border-btn.active {
   background-color: #000000;
 }
 
-.blue-button:hover,
-.blue-button:focus,
-.blue-button:active,
-.blue-button.active,
-.open .dropdown-toggle.blue-button {
+.blue-button {
+  color: #ffffff;
+  background-color: #013975;
+  border-color: #EFF1F7;
+}
+
+.blue-button:hover, .blue-button:focus, .blue-button:active, .blue-button.active, .open .dropdown-toggle.blue-button {
   color: #ffffff;
   background-color: #154E8C;
   border-color: #EFF1F7;
 }
 
-.blue-button:active,
-.blue-button.active,
-.open .dropdown-toggle.blue-button {
+.blue-button:active, .blue-button.active, .open .dropdown-toggle.blue-button {
   background-image: none;
 }
 
-.blue-button.disabled,
-.blue-button[disabled],
-fieldset[disabled] .blue-button,
-.blue-button.disabled:hover,
-.blue-button[disabled]:hover,
-fieldset[disabled] .blue-button:hover,
-.blue-button.disabled:focus,
-.blue-button[disabled]:focus,
-fieldset[disabled] .blue-button:focus,
-.blue-button.disabled:active,
-.blue-button[disabled]:active,
-fieldset[disabled] .blue-button:active,
-.blue-button.disabled.active,
-.blue-button[disabled].active,
-fieldset[disabled] .blue-button.active {
+.blue-button.disabled, .blue-button[disabled], fieldset[disabled] .blue-button, .blue-button.disabled:hover, .blue-button[disabled]:hover, fieldset[disabled] .blue-button:hover, .blue-button.disabled:focus, .blue-button[disabled]:focus, fieldset[disabled] .blue-button:focus, .blue-button.disabled:active, .blue-button[disabled]:active, fieldset[disabled] .blue-button:active, .blue-button.disabled.active, .blue-button[disabled].active, fieldset[disabled] .blue-button.active {
   background-color: #013975;
   border-color: #EFF1F7;
 }
@@ -181,12 +119,12 @@ fieldset[disabled] .blue-button.active {
   background-color: #ffffff;
 }
 
-.nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
+.my-skills-left-nav>li.active>a, .my-skills-left-nav>li.active>a:focus, .my-skills-left-nav>li.active>a:hover {
   color: #808080;
   background-color: #DCDCDC;
 }
 
-.nav-pills>li>a {
+.my-skills-left-nav>li>a {
   height: 25px;
   line-height: 15px;
   color: #808080;
@@ -214,12 +152,10 @@ fieldset[disabled] .blue-button.active {
     padding-right: 95px;
     padding-left: 95px;
   }
-
   .add-post-textarea {
     height: 100px;
     width: 100%;
   }
-
   .add-post-modal-footer {
     margin-top: 10px;
   }
@@ -263,11 +199,14 @@ fieldset[disabled] .blue-button.active {
   padding: 15px 15px 0px 15px;
 }
 
-.add-post-modal-header h4 {
+.add-post-modal-container {
+  width: ;
 }
 
+.add-post-modal-header h4 {}
+
 .add-post-modal-container .modal-dialog, .add-post-modal-container .modal-content {
-  height: 250px;
+  height: 270px;
 }
 
 .common-dropdown {
@@ -282,15 +221,12 @@ fieldset[disabled] .blue-button.active {
   height: 25px;
 }
 
-.common-dropdown:hover, .common-dropdown:focus, .common-dropdown:active,
-.common-dropdown:active.focus, .common-dropdown:active:focus, .common-dropdown:active:hover,
-.open>.dropdown-toggle.common-dropdown.focus, .open>.dropdown-toggle.common-dropdown:focus,
-.open>.dropdown-toggle.common-dropdown:hover {
-    color: #333;
-    border: none;
-    background-color: inherit;
-    box-shadow: none;
-    background-image: none;
+.common-dropdown:hover, .common-dropdown:focus, .common-dropdown:active, .common-dropdown:active.focus, .common-dropdown:active:focus, .common-dropdown:active:hover, .open>.dropdown-toggle.common-dropdown.focus, .open>.dropdown-toggle.common-dropdown:focus, .open>.dropdown-toggle.common-dropdown:hover {
+  color: #333;
+  border: none;
+  background-color: inherit;
+  box-shadow: none;
+  background-image: none;
 }
 
 .panel-default .panel-heading {
@@ -311,28 +247,61 @@ fieldset[disabled] .blue-button.active {
   float: left;
 }
 
-.my-skills-left-nav-header h4{
+.my-skills-left-nav-header h4 {
   border-bottom: 1px solid #e2e2e2;
   padding-left: 5px;
   padding-bottom: 10px;
 }
 
 .skill-header {
+  margin-top: 0px;
   margin-bottom: 40px;
 }
 
 .myskills-btn-grp, .add-post-div, .add-project-div {
-  display: inline-flex;
   width: 100%;
 }
 
+.add-post-btn-div {
+  border-color: linear-gradient(90deg, rgba(52, 52, 57, 1) 0%, rgba(51, 51, 68, 1) 45%, rgba(14, 78, 101, 1) 100%);
+}
+
 .myskills-btn-grp {
+  padding: 0px;
   margin-bottom: 10px;
+}
+
+.find-projects {
+  border: 0;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  border-radius: 20px;
+  outline: 0;
+  background-image: url(../search-icon.png);
+  background-repeat: no-repeat;
+  background-position: 95% 50%;
+  color: black;
+  padding-left: 10%;
+}
+
+.btn:focus, .btn:active {
+  outline: 0;
+  box-shadow: none;
 }
 
 .add-post-btn {
   width: 100%;
   height: 40px;
+  color: #EDE8E8;
+  background: rgb(52, 52, 57);
+  background: linear-gradient(90deg, rgba(52, 52, 57, 1) 0%, rgba(51, 51, 68, 1) 45%, rgba(14, 78, 101, 1) 100%);
+}
+
+.add-post-btn:hover, .add-post-btn:focus, .add-post-btn:active, .add-post-btn.active, .open .dropdown-toggle.add-post-btn {
+  color: #EDE8E8;
+  background-color: rgb(52, 52, 57);
+  background: linear-gradient(90deg, rgba(52, 52, 57, 1) 0%, rgba(51, 51, 68, 1) 45%, rgba(14, 78, 101, 1) 100%);
 }
 
 .add-project-btn {
@@ -372,7 +341,6 @@ fieldset[disabled] .blue-button.active {
   width: 20%;
   display: inline-block;
   margin-right: 10px;
-
 }
 
 .select-skill__control {
