added documentation for controllers and added display pictures

--- a/client/src/components/global_nav.css
+++ b/client/src/components/global_nav.css
@@ -115,3 +115,8 @@
 .nav-item-active {
   border-bottom: 2px solid black;
 }
+
+.dropdown-display-picture {
+  border-radius: 50%;
+  height: 40px;
+}
