--- a/client/src/components/post.css
+++ b/client/src/components/post.css
@@ -26,7 +26,6 @@
 
 .post-link-preview {
   margin-top: 10px;
-  /* display: flex; */
   border: 1px solid #e2e2e2;
   border-radius: 10px;
 }
@@ -44,10 +43,6 @@
 }
 
 .post-link-preview-img {
-  /* min-height: 80px;
-  max-height: 250px;
-  min-width: 100%;
-  max-width: 100%; */
   height: auto;
   width: 100%;
   border-radius: 0px 0px 10px 10px;
@@ -94,7 +89,7 @@
   /* max-height = line-height (1.2) * lines max number (3) */
   max-height: 2.8em;
   /* fix problem when last visible word doesn't adjoin right side  */
-  text-align: justify;
+  /* text-align: justify; */
   /* place for '...' */
   margin-right: -1em;
   padding-right: 1em;
